--- a/requirements.txt
+++ b/requirements.txt
@@ -33,3 +33,24 @@ zope.event==4.5.0
 zope.interface==5.4.0
 
 google~=3.0.0
+
+alabaster==0.7.12
+Babel==2.9.1
+beautifulsoup4==4.10.0
+docutils==0.17.1
+imagesize==1.3.0
+packaging==21.2
+protobuf==3.19.1
+Pygments==2.10.0
+pyparsing==2.4.7
+pytz==2021.3
+snowballstemmer==2.1.0
+soupsieve==2.3
+Sphinx==4.2.0
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
+uuid==1.30
