--- a/src/config.ini
+++ b/src/config.ini
@@ -7,7 +7,7 @@ response_timeout = 120_000
 
 #host - rabbit mq host
 #host = 'localhost'
-host = '192.168.0.108'
+host = 192.168.0.108
 
 #port - rabbit mq port
 #port = 5672
@@ -27,3 +27,4 @@ max_users = 1
 
 #test_duration, -1 or not set for non-ending test. Value in seconds
 #test_duration = 60
+test_duration =
